--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,7 +158,7 @@ a {
     text-decoration: none;
 }
 
-p {
+p, ul {
     margin-bottom: 0;
 }
 
@@ -423,9 +423,74 @@ p {
 }
 
 .intro {
+    position: relative;
     height: 100vh;
     transition: var(--gen-transition);
     z-index: var(--layer-1);
+}
+
+.large-logo:nth-child(1),
+.large-logo:nth-child(2) {
+    position: absolute;
+    left: 50px;
+    top: 20%;
+    height: 60%;
+    opacity: .05;
+    transition: var(--gen-transition);
+}
+
+.large-logo:nth-child(3),
+.large-logo:nth-child(4) {
+    position: absolute;
+    right: 50px;
+    top: 20%;
+    height: 60%;
+    opacity: .05;
+    transition: var(--gen-transition);
+}
+
+.large-logo:nth-child(2),
+.large-logo:nth-child(4) {
+    animation: rotate 30s linear infinite;
+}
+
+@media only screen and (max-width: 1024px) {
+    .home-content .large-logo {
+        top: 25%;
+        height: 50%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .home-content .large-logo:nth-child(1),
+    .home-content .large-logo:nth-child(2) {
+        top: 15%;
+        left: -150px;
+        height: 70%;
+    }
+
+    .home-content .large-logo:nth-child(3),
+    .home-content .large-logo:nth-child(4) {
+        top: 15%;
+        right: -150px;
+        height: 70%;
+    }
+}
+
+@media only screen and (max-width: 426px) {
+    .home-content .large-logo:nth-child(1),
+    .home-content .large-logo:nth-child(2) {
+        top: 15%;
+        left: -150px;
+        height: 50%;
+    }
+
+    .home-content .large-logo:nth-child(3),
+    .home-content .large-logo:nth-child(4) {
+        top: 45%;
+        right: -150px;
+        height: 50%;
+    }
 }
 
 .home-content {
