--- a/CSS/style.css
+++ b/CSS/style.css
@@ -133,7 +133,7 @@
     --cardbg: url(/images/waves.png);
 
     --text-color: #fdfdfded;
-    --card-bottom-bg: #1a1a1a;   
+    --card-bottom-bg: #212121;   
     --dropdown-menu: #252930;
     --card-active-text: #242522;
     --cardasd: #333333;
